style/calc.css
.calc-name {
    font-weight: bolder;
    color: goldenrod;

    text-align: center;
    user-select: none;
    margin: 10px 0;
}
.letter {
    display: inline-block;
    margin: 0 3px;
    font-size: xx-large;
}
@media screen and (orientation: portrait) {
    .letter {
        font-size: x-large;
    }
    .calc-name {
        width: 90dvw;
    }
}
.calc-name > .strike-letter {
    text-decoration: line-through 5px red;
    animation: strike-letter-name 1s;
    color: yellow;
    opacity: .5;
}
@keyframes strike-letter-name {
    0%, 100% {
        scale: 1;
        color: yellow;
        opacity: .5;
    }
    50% {
        scale: .69;
        color: red;
        opacity: 1;
    }
}

#remaining-letters-count {
    font-size: xx-large;
    color: green;
    text-align: center;

    display: none;
}
#remaining-letters-special-case-msg {
    font-size: small;
    display: none;
}

#flames {
    color: purple;
    text-align: center;
}
#flames > .strike-letter {
    color: violet;
    text-decoration: line-through 5px red;
    animation: strike-letter-flames 1s;
}
@keyframes strike-letter-flames {
    0%, 100% {
        color: violet;
        opacity: .75;
    }
    50% {
        color: blue;
        opacity: 1;
    }
}

